--- a/bj2-master/src/main/resources/templates/todo/list.html
+++ b/bj2-master/src/main/resources/templates/todo/list.html
@@ -1,122 +1,119 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/lteLayout.html}">
-
+      layout:decorate="~{layout/lteLayout2.html}">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <div layout:fragment="content">
-    <h1>Todo List Page</h1>
-    <div class="card">
-      <div class="card-header">
-        <h3 class="card-title">Bordered Table</h3>
-      </div>
-      <!-- /.card-header -->
-      <div class="card-body">
-        <table class="table table-bordered todoTable">
-          <thead>
-          <tr>
-            <th style="width: 10px">#</th>
-            <th>Task</th>
-            <th>Progress</th>
-            <th style="width: 40px">Label</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr th:each="todo :${pageResponseDTO.list}">
-            <td>1.</td>
-            <td class="todoTD" th:data-tno="${todo.tno}">[[${todo.tno}]]</td>
-            <td>
-              <div class="progress progress-xs">
-                <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-              </div>
-            </td>
-            <td><span class="badge bg-danger">55%</span></td>
-          </tr>
+
+ 
+
+    <div layout:fragment="content">
+        <h1>Todo List Page!!</h1><br>
+        <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Bordered Table</h3>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body">
+              <table class="table table-bordered todoTable">
+                <thead>
+                  <tr>
+                    <th style="width: 10px">#</th>
+                    <th>Task</th>
+                    <th>Progress</th>
+                    <th style="width: 40px">Label</th>
+                  </tr>
+                </thead>
+                <tbody>
 
 
-          </tbody>
-        </table>
-      </div>
-      <!-- /.card-body -->
-      <div class="card-footer clearfix">
-        <ul class="pagination pagination-sm m-0 float-right todoUL">
-          <li class="page-item"><a class="page-link" href="10">&laquo;</a></li>
-          <li class="page-item"><a class="page-link" href="11">11</a></li>
-          <li class="page-item"><a class="page-link" href="12">12</a></li>
-          <li class="page-item"><a class="page-link" href="13">13</a></li>
-          <li class="page-item"><a class="page-link" href="21">&raquo;</a></li>
-        </ul>
-      </div>
+                  <tr th:each="todo : ${pageResponseDTO.list}">
+                    <td>[[${todo.tno}]]</td>
+                    <td class="todoTD" th:data-tno="${todo.tno}">[[${todo.tno}]]</td>
+                    <td>
+                      <div class="progress progress-xs">
+                        <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
+                      </div>
+                    </td>
+                    <td><span class="badge bg-danger">55%</span></td>
+                  </tr>
+
+
+                </tbody>
+              </table>
+            </div>
+            <!-- /.card-body -->
+            <div class="card-footer clearfix">
+              <ul class="pagination pagination-sm m-0 float-right todoUL">
+
+              </ul>
+            </div>
+          </div>
+          
+        <form class="actionForm" action="/todo/list" method="get">
+          <input type="hidden" name="page" value="3">
+          <input type="hidden" name="size" value="10">
+        </form>
+
+        <script src="/js/pageUtil.js"></script>
     </div>
-    <!-- /.card -->
 
-    <form class="actionForm" action="/todo/list" method="get">
-      <input type="hidden" name="page" value="3">
-      <input type="hidden" name="size" th:value="${pageRequestDTO.size}">
-    </form>
+    <script layout:fragment="script" th:inline="javascript">
 
-    <script src="/js/pageUtil.js"></script>
-  </div>
+      const actionForm = document.querySelector(".actionForm")
+      const pageObj = actionForm.querySelector("input[name='page']")
+      const todoUL = document.querySelector(".todoUL")
 
-  <script layout:fragment="script" th:inline="javascript">
+      todoUL.addEventListener("click", (e) => {
+        e.preventDefault()
+        e.stopPropagation()
 
-    const actionForm = document.querySelector(".actionForm")
-    const pageObj = actionForm.querySelector("input[name='page']")
-    const todoUL = document.querySelector(".todoUL")
+        const target = e.target // a 태그
+        const pageNum = target.getAttribute("href")
+        
+        pageObj.value = pageNum
+        actionForm.setAttribute("action", `/todo/list`)
+        actionForm.submit()
+      }, false)
 
-    todoUL.addEventListener("click", (e) => {
-      e.preventDefault()
-      e.stopPropagation()
-
-      const target = e.target
-      const pageNum = target.getAttribute("href")
-
-      pageObj.value = pageNum
-      actionForm.setAttribute("action", `/todo/list`)
-      actionForm.submit()
-
-    }, false)
+      \m]
+      [pko;-=]
+        const {page,size} = [[${pageRequestDTO}]]
+        console.log(page,size)
+        const {total} = [[${pageResponseDTO}]]
+        console.log("total: " + total)
 
 
-    const {page,size} = [[${pageRequestDTO}]]
+        const pageLiStr = makePages(page, size, total)
+        todoUL.innerHTML = pageLiStr
 
-    console.log(page,size)
+        const todoTable = document.querySelector(".todoTable")
 
-    const {total} = [[${pageResponseDTO}]]
+        todoTable.addEventListener("click", (e) => {
 
-    console.log("total:" + total)
+          const target = e.target
 
+          if(!target.getAttribute("data-tno")){
+            return
+          }
 
+          const tno = target.getAttribute("data-tno")
 
-    const pageLIStr = makePages(page,size, total)
-    todoUL.innerHTML = pageLIStr
+          console.log("TNO: " + tno)
 
-    const todoTable = document.querySelector(".todoTable")
+          actionForm.setAttribute("action", `/todo/read/${tno}`)
 
-    todoTable.addEventListener("click", (e) => {
+          actionForm.submit()
 
-      const target = e.target
+        }, false)
 
-      if(!target.getAttribute("data-tno")){
-        return 
-      }
-
-      const tno = target.getAttribute("data-tno")
-
-      console.log("TNO: " + tno)
-
-      actionForm.setAttribute("action", `/todo/read/${tno}`)
-
-      actionForm.submit()
-
-
-    },false)
-
-  </script>
+    </script>
 
 </body>
 </html>
