--- a/bj2-master/src/main/resources/templates/todo/read.html
+++ b/bj2-master/src/main/resources/templates/todo/read.html
@@ -1,20 +1,35 @@
+<!-- 
+        // await - 비동기 호출인데 동기화된 코드처럼 사용할때
+        // await가 사용되면 async()
+        // async -> promise
+        // promise: then, catch -->
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/lteLayout.html}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{layout/lteLayout2.html}">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <div layout:fragment="content">
     <h1>Read</h1>
+    [[${todo}]]
     <ul class="postsDiv">
 
     </ul>
 
-    <div class="modal" tabindex="-1" role="dialog">
+    <form method="post" id="write">
+      <input type="text" name="wTitle">
+      <input type="text" name="wAuthor">
+      <input type="submit">
+    </form>
+
+    <div class="modal replyModal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -24,108 +39,135 @@
             </button>
           </div>
           <div class="modal-body">
-            <input type="text" name="title">
-            <input type="text" name="author">
+            <input type="text" name="gno" readonly>
+            <input type="text" name="reply" value="AAA">
+            <input type="text" name="replyer" value="user00">
           </div>
           <div class="modal-footer">
+            <button type="button" class="btn btn-info btnAdd">ADD</button>
             <button type="button" class="btn btn-danger btnDelete">DELETE</button>
-            <button type="button" class="btn btn-primary">MODIFY</button>
+            <button type="button" class="btn btn-primary btnModify">MODIFY</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- 댓글 목록 출력 -->
+    <div>
+      <ul class="replyUL">
+
+      </ul>
+    </div>
+
+    <!-- axios 준비물 -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   </div>
 
-  <script layout:fragment="script">
-    const postsDiv = document.querySelector(".postsDiv")
-    const path = "http://localhost:9090/posts"
-    const modalDiv = $(".modal")
+  <script layout:fragment="script" th:inline="javascript">
 
-    postsDiv.addEventListener("click", e => {
-      e.preventDefault()
+    const replyModal = new bootstrap.Modal(document.querySelector(".replyModal"))
+    const replyUL = document.querySelector(".replyUL")
+    const { tno } = [[${ todo }]]
+
+    // 모달 관리
+    const gnoInput = document.querySelector("input[name='gno']")
+    const replyInput = document.querySelector("input[name='reply']")
+    const replyerInput = document.querySelector("input[name='replyer']")
+
+
+    // 댓글 기능
+    // 댓글 목록
+    const getRemoteList = async (pageNum) => {
+      const { data } = await axios.get(`http://localhost:8080/replies/${tno}/list?page${page}`)
+      return data
+    }
+    // 댓글 추가
+    const postRemoteAdd = async (reply) => {
+      const { data } = await axios.post(`http://localhost:8080/replies/${tno}/new`, reply)
+      return data
+    }
+
+    
+    let page = 1
+
+    // 비동기 테스트
+    // getRemoteList(page).then(result => {
+    //     console.log(result)
+    // })
+
+    // 비동기 등록 테스트
+    const reply = { tno: tno, reply: "Test Reply", replyer: "r1" }
+
+    const loadReply = async (page, goEnd = false) => {
+
+      const data = await getRemoteList(page)
+
+      console.log("loadReply..........")
+      console.log(data)
+
+      const { list, total } = data
+
+      let str = ""
+
+      for (let i = 0; i < list.length; i++) {
+        const { rno, reply, replyer, gno } = list[i]
+        str += `<li data-rno=${rno} data-gno=${gno}>${reply} <button>답글</button></li>`
+      } // end for
+
+      replyUL.innerHTML = str
+
+    }
+
+    loadReply(page, true)
+
+    // 댓글조회, 답글쓰기 이벤트
+    replyUL.addEventListener("click", (e) => {
       e.stopPropagation()
+      e.preventDefault()
 
       const target = e.target
-      console.log(target)
 
-      const pid = target.getAttribute("data-id")
+      const tag = target.tagName
+      if (tag === 'LI') {
 
-      console.log(pid)
+      } else if (tag === 'BUTTON') {
 
-      getPostOne(pid).then(post => {
-        console.log(post)
-        const {id,title,author} = post
-        //modal의 내용물을 변경 
-        document.querySelector('.modal-title').innerHTML = id 
-        document.querySelector('input[name="title"]').value = title
-        document.querySelector('input[name="author"]').value = author
-        modalDiv.modal('show')
+        const liObj = target.closest("li")
+        const gno = liObj.getAttribute("data-gno")
+
+        gnoInput.value = gno;
+
+        replyModal.show()
+
+      }
+
+    }, false)
+
+    document.querySelector(".btnAdd").addEventListener("click", e => {
+
+      const reply = {
+        tno: tno,
+        gno: gnoInput.value,
+        reply: replyInput.value,
+        replyer: replyerInput.value
+      }
+
+      console.log(reply)
+
+      postRemoteAdd(reply).then(result => {
+        alert("성공")
+        loadReply(page)
+
+      }).catch(e => {
+        console.log("실패")
+        console.log(e.response.data)
       })
 
     }, false)
 
-    document.querySelector(".btnDelete").addEventListener("click",e => {
-
-      const id =  document.querySelector('.modal-title').innerHTML
-
-      deletePostOne(id).then(result => {
-        console.log(result)
-        modalDiv.modal('hide')
-        getDataDefault()
-      })
-
-
-    },false)
-    const postOne = async(data) => {
-      const res = await axios.post(path,data)
-      return res.data
-    }
-
-    const putOne = async(data) => {
-      const res = await axios.put(`${path}/${data.id}`,data)
-      return res.data
-    }
-
-    // const temp = {title:'adfasdf', author:'asdfsdf'}
-    // postOne(temp)
-
-    const getPosts = async() => {
-      const res = await axios.get(path)
-      return res.data
-    }
-    const getPostOne = async (id) => {
-      const res = await axios.get(`${path}/${id}`)
-      return res.data
-    }
-
-    const deletePostOne = async(id) => {
-      const res = await axios.delete(`${path}/${id}`)
-      return res.data
-    }
-
-    function getDataDefault() {
-      getPosts().then(arr => {
-
-      let str = ""
-      console.log(arr)
-      for(let i = 0; i < arr.length; i++){
-        const {id, title, author} = arr[i]
-        str += `<li data-id=${id}>${title}</li>`
-      }
-      console.log(str)
-      postsDiv.innerHTML = str
-      })
-    }
-
-    getDataDefault()
-    
-
-
   </script>
-
 </body>
+
 </html>
