--- a/b4-main/src/main/resources/templates/product/register.html
+++ b/b4-main/src/main/resources/templates/product/register.html
@@ -1,169 +1,166 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<h1>Product Register Page</h1>
+    <h1>Product Register Page</h1>
 
-<form class="actionForm" action="/product/register" method="post">
-  <div>
-    <input type="text" name="pname" value="상품1">
-  </div>
-  <div>
-    <input type="number" name="price" value="12000">
-  </div>
-  <div>
-    <button class="saveBtn">Register</button>
-  </div>
-</form>
+    <form class="actionForm" action="/product/register" method="post">
+        <div>
+            <input type="text" name="pname" value="상품1">
+        </div>
 
-<input class="uploadInput" type="file" name="upload" multiple >
-<button class="uploadBtn">UPLOAD</button>
+        <div>
+            <input type="number" name="price" value="12000">
+        </div>
+        <div>
+            <button class="saveBtn">Register</button>
+        </div>
+    </form>
 
+    <!-- multiple -> 파일 여러개 -->
+    <input class="uploadInput" type="file" name="upload" multiple >
+    <button class="uploadBtn">UPLOAD</button>
+    
+    <div class="uploadDiv">
+        <ul class="uploadUL">
 
-<div class="uploadDiv">
-  <ul class="uploadUL">
+        </ul>
+    </div>
 
-  </ul>
-</div>
+    <style>
+        .uploadUL {
+            list-style: none;
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .uploadUL li {
+            margin: 1em;
+            background-color: deepskyblue;
+            padding: 1em;
+            border: 1px solid darkgray;
+            border-radius: 0.5em;
+        }
+    </style>
 
-<style>
-  .uploadUL {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .uploadUL li {
-    margin: 1em;
-    background-color: darksalmon;
-    padding: 1em;
-    border: 1px solid darkblue;
-    border-radius: 0.2em;
-  }
-</style>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script>
-
-  const uploadBtn = document.querySelector(".uploadBtn")
-  const uploadInput = document.querySelector(".uploadInput")
-  const uploadUL = document.querySelector(".uploadUL")
-
-  const saveBtn = document.querySelector(".saveBtn")
-
-  const actionForm = document.querySelector(".actionForm")
-
-  saveBtn.addEventListener("click", e => {
-
-    e.preventDefault()
-    e.stopPropagation()
-
-    const liArr = uploadUL.querySelectorAll("li")
-
-    if(!liArr || liArr.length === 0){
-      alert("파일을 넣으라고!!!")
-      return
-    }
-
-    let str = ""
-    for(let liObj of liArr){
-      console.log(liObj)
-      const uuid = liObj.getAttribute("data-uuid")
-      const fileName = liObj.getAttribute("data-filename")
-      console.log(uuid, fileName)
-      console.log("------------------------")
-      str += `<input type='hidden' name='fileNames' value='${uuid}_${fileName}'>`
-    }
-
-    actionForm.innerHTML += str
-
-    actionForm.submit()
-
-  }, false)
+        const uploadBtn = document.querySelector(".uploadBtn")
+        const uploadInput = document.querySelector(".uploadInput")
+        const uploadUL = document.querySelector(".uploadUL")
+        const saveBtn = document.querySelector(".saveBtn")
+        const actionForm =document.querySelector(".actionForm")
 
 
-  uploadBtn.addEventListener("click", e => {
-    e.preventDefault()
-    e.stopPropagation()
+        saveBtn.addEventListener("click", e =>{
 
-    console.dir(uploadInput.files)
+            e.preventDefault()
+            e.stopPropagation()
 
-    if(!uploadInput.files || uploadInput.files.length === 0){
-      return
-    }
+            const liArr = uploadUL.querySelectorAll("li")
 
-    const formData = new FormData()
+            if(!liArr || liArr.length === 0){
+                alert("넣으라규")
+                return
+            }
 
-    for(let i = 0; i < uploadInput.files.length ; i++){
-      formData.append("files",uploadInput.files[i] )
-    }
+            let str = ""
+            for(let liObj of liArr){
+                console.log(liObj)
+                const uuid = liObj.getAttribute("data-uuid")
+                const fileName = liObj.getAttribute("data-filename")
+                console.log(uuid, fileName)
+                console.log("--------------------------------------")
+                str += `<input type='hidden' name='fileNames' value='${uuid}_${fileName}'>`
+            }
 
-    console.dir(formData)
+            actionForm.innerHTML += str
 
-    const header = {headers: {"Content-Type": "multipart/form-data"}}
+            actionForm.submit()
 
-    axios.post('http://localhost:8080/upload', formData, header)
+        }, false)
+        
+
+        uploadBtn.addEventListener("click", e => {
+            e.preventDefault()
+            e.stopPropagation()
+            
+            console.dir(uploadInput.files)
+
+            if(!uploadInput.files || uploadInput.files.length === 0){
+                return
+            }
+
+            formData = new FormData()
+
+            for(let i = 0; i < uploadInput.files.length; i++){
+                formData.append("files", uploadInput.files[i])
+            }
+
+            console.dir(formData)
+
+            const header = {headers: {"Content-Type": "multipart/form-data"}}
+
+            axios.post('http://localhost:8080/upload', formData, header)
             .then(res => {
-              const result = res.data
-              console.log(result)
-              showProducts(result)
+                const result = res.data
+                console.log(result)
+                showProducts(result)
             })
 
+        }, false)
 
-  },false)
+        const showProducts = (arr) => {
 
-  const showProducts = (arr) => {
+            let str = ""
 
-    let str =""
+            for(const uploadFile of arr){
+                const {fileName, link, uuid} = uploadFile
 
-    for(const uploadFile of arr){
-      const {fileName,link,uuid} = uploadFile
-
-      str += `
-        <li data-uuid='${uuid}' data-fileName='${fileName}'>
-          <div>
-            <a href='http://localhost/${uuid}_${fileName}' target="_blank">
-            <img src='http://localhost/${link}'/>
-            </a>
-            <p>${fileName} <button onclick="javascript:removeFile(event, '${uuid}', '${fileName}')">x</button></p>
-          <div>
-        </li>`
-    }
-    uploadUL.innerHTML += str
-
-
-
-  }
-
-  const removeFile = (e, uuid, fileName) => {
-
-    e.stopPropagation()
-    e.preventDefault()
-    alert("remove file")
-
-    const liObj = e.target.closest("li")
-
-    console.log(liObj)
-
-
-    axios.delete(`http://localhost:8080/removeFile/${uuid}_${fileName}`)
-
-
-    liObj.remove()
+                str += `
+                <li data-uuid='${uuid}' data-fileName='${fileName}'>
+                    <div>
+                        <a href='http://localhost/${uuid}_${fileName}' target="_blank">
+                        <img src='http://localhost/${link}'/>
+                        </a>
+                        <p>${fileName} <button onclick="javascript:removeFile(event, '${uuid}', '${fileName}')">x</button></p>
+                    </div>
+                </li>`
+            }
+            uploadUL.innerHTML += str
 
 
 
-  }
+        }
 
-  // window.onbeforeunload = function (e) {
-  //
-  //   return 'Are you sure';
-  // }
+        // 매개변수로 event를 포함시키는 이유 -> 해당 li를 지우기 위해.
+        const removeFile = (e, uuid, fileName) => {
+            e.stopPropagation()
+            e.preventDefault()
 
-</script>
+            alert("remove file")
+
+            // 삭제버튼 상위의 li를 찾기
+            const liObj = e.target.closest("li")
+            console.log(liObj)
+
+
+            axios.delete(`http://localhost:8080/removeFile/${uuid}_${fileName}`)
+
+            // 해당 엘리먼트 삭제
+            liObj.remove()
+
+        }
+
+        // window.onbeforeunload = function () {
+        //     console.log('AAA')
+        //     return ''
+        // }
+
+    </script>
 </body>
 </html>
